[tool.poetry]
name = "repl_nix_chat-langchain"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"
uvicorn = "^0.21.1"
bs4 = "^0.0.1"
fastapi = "^0.95.0"
gradio = "^3.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
